--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,3 @@
 {{page-title "Nexus"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
+<h1>Nexus</h1>
 {{outlet}}
